// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updatePasswordDescribedByValue Tests should not update password field aria-describedby value when PasswordRequirements element does not exist 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "id": "title_1",
        "options": Object {
          "content": "Password expired",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "id": "button_1",
        "options": Object {
          "type": "submit",
        },
        "type": "Button",
      },
      Object {
        "id": "link_1",
        "options": Object {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`updatePasswordDescribedByValue Tests should set password field aria-describedby value when PasswordRequirements element exists 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "id": "title_1",
        "options": Object {
          "content": "Password expired",
        },
        "type": "Title",
      },
      Object {
        "id": "PasswordRequirements_abc123",
        "options": Object {
          "header": "Password Requirements:",
          "id": "password-requirements-list",
          "requirements": Array [],
          "settings": Object {},
          "userInfo": Object {},
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "ariaDescribedBy": "PasswordRequirements_abc123",
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "ariaDescribedBy": "PasswordRequirements_abc123",
        "options": Object {
          "inputMeta": Object {
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "id": "button_1",
        "options": Object {
          "type": "submit",
        },
        "type": "Button",
      },
      Object {
        "id": "link_1",
        "options": Object {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`updatePasswordDescribedByValue Tests should update password field aria-describedby value when PasswordRequirements element exists and password fields contain existing describedby value 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "id": "title_1",
        "options": Object {
          "content": "Password expired",
        },
        "type": "Title",
      },
      Object {
        "id": "PasswordRequirements_abc123",
        "options": Object {
          "header": "Password Requirements:",
          "id": "password-requirements-list",
          "requirements": Array [],
          "settings": Object {},
          "userInfo": Object {},
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "ariaDescribedBy": "title_1 PasswordRequirements_abc123",
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "ariaDescribedBy": "title_1 PasswordRequirements_abc123",
        "options": Object {
          "inputMeta": Object {
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "id": "button_1",
        "options": Object {
          "type": "submit",
        },
        "type": "Button",
      },
      Object {
        "id": "link_1",
        "options": Object {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
